[package]
name = "test-grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
tokio = { version = "1.26.0", features=["full"] }
prost = "0.11.8"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
hyper-rustls = "0.23.2"
hyper = "0.14.25"
rustls = "0.20.8"

[build-dependencies]
tonic-build = "0.8.4"